@@ -244,6 +244,8 @@ All (GUI):
 
 - Fix wxFLEX_GROWMODE_ALL in wxFlexGridSizer with proportions (#23253).
 - Fix wxEditorDialogProperty in wxPropertyGrid (#23272).
+- Fix entering dates in wxGenericDatePicker in nb_NO and other locales
+  using names for the months in short date format (#23310).
 
 wxMSW:
 
